CPU 포팅파일 이름변경. Port_ARM_CM3_Keil.c -> Boss_CPU_ARM_CM3_Keil.c Port_ATmega_GCC.c   -> Boss_CPU_ATmega_GCC.c
git-svn-id: https://dev.naver.com/svn/rt-boss/trunk@38 815b79aa-b098-0410-98f2-e32a66b021fa

--- a/ex_ATmega128_GCC/Makefile
+++ b/ex_ATmega128_GCC/Makefile
@@ -58,14 +58,14 @@ TARGETNAME = Boss_ATmega128
 
 
 # Build directory & Object files directory & dependencies files directory
-BUILDDIR = _build
+BUILDDIR = _Build
 TARGET = $(BUILDDIR)/$(TARGETNAME)
 OBJDIR  = $(BUILDDIR)/obj
 DEPDIR  = $(BUILDDIR)/.dep
 
 # List C source files here. (C dependencies are automatically generated.)
 SRC =	Boss_Conf.c			\
-		Port_ATmega_GCC.c	\
+		Boss_CPU_ATmega_GCC.c \
 		Boss.c				\
 		Boss_Tmr.c			\
 		Boss_Mem.c			\
